--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "license": "UNLICENSED",
   "scripts": {
+    "format": "prettier --write src/**/*.ts",
     "build": "tsc",
     "dev": "nodemon --config",
     "start": "node dist"
@@ -17,11 +18,14 @@
     "exec": "yarn build && yarn start"
   },
   "dependencies": {
-    "@edixon/concord": "^1.5.2",
-    "instagrapi": "^5.0.0"
+    "@edixon/concord": "^1.6.2",
+    "@typegoose/typegoose": "^9.7.1",
+    "instagrapi": "^5.0.0",
+    "mongoose": "^6.2.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.3"
   },
   "engines": {
