--- a/packages/bot-telegram/tsconfig.json
+++ b/packages/bot-telegram/tsconfig.json
@@ -2,16 +2,12 @@
   "compilerOptions": {
     "target": "es2016",
     "lib": ["ESNext"],
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
     "module": "commonjs",
     "rootDir": "src",
     "moduleResolution": "node",
     "baseUrl": "src",
-    "paths": {
-      "@SERVICES/*": ["services/*"]
-    },
     "declaration": true,
+    "composite": true,
     "outDir": "dist",
     "removeComments": true,
     "esModuleInterop": true,
@@ -19,8 +15,7 @@
     "strict": true,
     "noImplicitAny": false,
     "noImplicitThis": true,
-    "skipLibCheck": true,
-    "typeRoots": ["node_modules/@types", "src/@types"]
+    "skipLibCheck": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
