create logic to build projects
- modify files package.json and tsconfig.json in /packages

--- a/packages/bot-discord/package.json
+++ b/packages/bot-discord/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc && tsc-alias",
     "dev": "nodemon --config",
-    "start": "node dist"
+    "start": "node ../../dist"
   },
   "nodemonConfig": {
     "ext": ".ts,.env",
