--- a/packages/bot-discord/tsconfig.json
+++ b/packages/bot-discord/tsconfig.json
@@ -11,7 +11,7 @@
     },
     "declaration": true,
     "composite": true,
-    "outDir": "dist",
+    "outDir": "../../dist",
     "removeComments": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -22,5 +22,5 @@
     "typeRoots": ["node_modules/@types", "src/@types"]
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/commands"]
 }
