--- a/packages/bot-telegram/tsconfig.json
+++ b/packages/bot-telegram/tsconfig.json
@@ -8,7 +8,7 @@
     "baseUrl": "src",
     "declaration": true,
     "composite": true,
-    "outDir": "dist",
+    "outDir": "../../dist",
     "removeComments": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
